<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <android.support.v7.widget.RecyclerView
                    android:visibility="visible"
                    android:id="@+id/todoList"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <RelativeLayout
                    android:id="@+id/emptyView"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                        <ImageView
                            android:layout_centerInParent="true"
                            android:src="@drawable/heads_up"
                            android:layout_width="150dp"
                            android:layout_height="150dp" />



                </RelativeLayout>

        </android.support.v4.widget.SwipeRefreshLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="AddTodo"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:src="@drawable/ic_add_todo"
            android:layout_gravity="bottom|right"
            app:fabSize="normal"/>

</android.support.design.widget.CoordinatorLayout>
