<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.LoginView">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_text_input_layout"
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmail_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:hint="Email Id" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/pwd_text_input_layout"
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etPwd_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:inputType="textWebPassword"
                android:imeOptions="actionNext"
                android:hint="Password" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/domain_text_input_layout"
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etDomain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:inputType="textUri"
                android:imeOptions="actionDone"
                android:hint="Domain" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/sign_in"
            android:layout_marginTop="10dp"
            style="@style/material_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="submit"/>

        <Button
            android:text="@string/sign_up"
            android:layout_marginTop="10dp"
            style="@style/material_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="toSignUp"/>
    </LinearLayout>
</RelativeLayout>
</ScrollView>