<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/reveal_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="400dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    android:background="@android:color/white"
    android:visibility="visible">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Take a note"
            android:layout_marginTop="20dp"
            android:gravity="top"
            android:minHeight="100dp"
            android:focusableInTouchMode="true"
            android:maxLines="5"
            android:imeOptions="actionNext"
            android:textColor="@android:color/black"/>
        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:editable="false"
            android:imeOptions="actionNext"
            android:hint="Date"
            android:drawableRight="@drawable/date"
            android:textColor="@android:color/black"/>
        <EditText
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableRight="@drawable/time"
            android:hint="time"
            android:imeOptions="actionNext"
            android:editable="false"
            android:textColor="@android:color/black"/>

        <RadioGroup
            android:id="@+id/radioGrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Daily"
                android:checked="true"
                android:textColor="@android:color/black"/>

            <RadioButton
                android:id="@+id/weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Weekly"
                android:textColor="@android:color/black"/>

        </RadioGroup>
        <LinearLayout
            android:id="@+id/weekly_layout"
            android:visibility="gone"
            android:paddingTop="10dp"
            android:gravity=""
            android:layout_width="match_parent"
            android:layout_marginBottom="100dp"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="S"
                android:textColor="@android:color/black"/>
            <CheckBox
                android:id="@+id/mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="M"
                android:textColor="@android:color/black"/>
            <CheckBox
                android:id="@+id/tus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="T"
                android:textColor="@android:color/black"/>
            <CheckBox
                android:id="@+id/wen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="W"
                android:textColor="@android:color/black"/>
            <CheckBox
                android:id="@+id/the"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TH"
                android:textColor="@android:color/black"/>
            <CheckBox
                android:id="@+id/fir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="F"
                android:textColor="@android:color/black"/>
            <CheckBox
                android:id="@+id/sat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="S"
                android:textColor="@android:color/black"/>

        </LinearLayout>
    </LinearLayout>
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:layout_toLeftOf="@+id/btn_save"
            android:textColor="@color/colorAccent"
            android:background="?android:attr/selectableItemBackground"/>
        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorAccent"
            android:background="?android:attr/selectableItemBackground"/>
    </RelativeLayout>
</RelativeLayout>
</ScrollView>