<resources>
    <string name="app_name">ToDo</string>
    <string name="longdsc">United Nations: Three of nine addresses provided by India to the United Nation\'s Sanctions Committee as addresses of underworld don Dawood Ibrahim in Pakistan have been found to be incorrect.
    ndia went to the Olympic Games in Rio with its biggest contingent yet and more expectations than ever. The 100-plus strong squad, with big names and experienced contenders, were set to create history with a record haul.  If the country could claim six medals at London 2012 – with two of the being silver – surely, it could only go up from here on. Maybe another gold medal, maybe even a unprecedented double-digit tally. The hope was high, as was the belief.</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="login401">Invalid credentials</string>
    <string name="login422">Some error string describing the error.</string>
    <string name="action">NOTIFICATION_ALARM</string>
    <string name="title_activity_splash">Splash</string>
</resources>
