<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/logout"
        android:icon="@drawable/heads_up"
        android:title="Help"
        app:showAsAction="always"
        />
</menu>